force-app/main/default/objects/My_Product__c/My_Product__c.object-meta.xml
<CustomObject>
    <description>Portal product line items</description>
    <label>My Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>