force-app/main/default/objects/My_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>My Products</relationshipLabel>
    <relationshipName>My_Products</relationshipName>
    <type>Lookup</type>
</CustomField>