force-app/main/default/objects/My_Product__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>My Products</relationshipLabel>
    <relationshipName>My_Products</relationshipName>
    <type>Lookup</type>
</CustomField>