force-app/main/default/objects/My_Product__c/fields/Price_Per_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price Per Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>